styles/globals.css
body {
  background-image: url(/background.svg);
  background-size: 100%;
  background-attachment: fixed;
}

.oleo {
  font-family: 'Oleo Script', cursive;
}

.pixsoil {
  font-size: 5rem;
  color: #815115;
  margin: 5rem auto 0;
}

.mobile {
  position: relative;
  width: 242px;
  margin-top: calc((100vh - 508px) / 2);
}

@media screen and (max-width: 910px) {
  .mobile {
    margin-top: 4rem;
    padding-bottom: 4rem;
  }
}

.mobile video {
  width: 91%;
  position: absolute;
  top: 9px;
  left: 9px;
  border-radius: 1rem;
}

.mobile .frame {
  width: 100%;
  height: 508px;
  top: 0;
  left: 0;
}

.results td {
  max-width: 10ch;
  word-wrap: break-word;
}

.suitable-plant-image {
  border-radius: .7rem;
  width: 100%;
  box-shadow: 0 8px -4px 24px rgba(212, 248, 215, 0.813);
  float: left;
}

